@@ -9,8 +9,16 @@
 var microtime = require('relative-microtime')
 
 function maybeTime (timer, time) {
-  if (timer._parent) return maybeTime(timer._parent, time)
-  return time >= 0 ? time * 1000 : timer._timer()
+  if (time >= 0) {
+    return time * 1000
+  }
+
+  let rootTimer = timer
+  while (rootTimer._parent) {
+    rootTimer = rootTimer._parent
+  }
+
+  return rootTimer._timer()
 }
 
 module.exports = class Timer {
